--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-
+<!-- BIRTHDAY DINNER -->
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -29,7 +29,7 @@
     <div class="container">
       <div class="row">
         <div class="col-md-12 text-center">
-          <h1 class="tlt1"> Sleepover party </h1>
+          <h1 class="tlt1"> Dinner and Movie :) </h1>
         </div>
       </div>
     </div>
@@ -38,7 +38,7 @@
     <div class="container">
       <div class="row">
         <div class="col-md-12">
-          <img class="img-fluid d-block mx-auto" src="https://media.giphy.com/media/kkYbDLFmNvO4E/giphy.gif" width="100%"> </div>
+          <img class="img-fluid d-block mx-auto" src="https://media.giphy.com/media/9tZc9Mzo9K0yOYx38U/giphy.gif" width="100%"> </div>
       </div>
     </div>
   </div>
@@ -46,7 +46,7 @@
     <div class="container">
       <div class="row">
         <div class="col-md-12">
-          <img class="img-fluid d-block mx-auto" src="assets/IMG_0745.jpg" width="50%"> </div>
+          <img class="img-fluid d-block mx-auto" src="https://media.giphy.com/media/l2RsBhyCSu5Y5XU3Zf/giphy.gif" width="50%"> </div>
       </div>
     </div>
   </div>
@@ -55,7 +55,7 @@
     <div class="container">
       <div class="row">
         <div class="col-md-12 text-centre">
-          <p class="lead">August 10th-11th ( Saturday-Sunday ) - 3:00 pm - 10:30 am . &nbsp;
+          <p class="lead">August 17th (Saturday) - 3:30 pm - 9:00 pm . &nbsp;
             <br>
             <br> Drop off and pick up at 7 Harrold St. Highbury
             <br>
